AR, VR, MR, XR, Metaverse and Animation pages updated

--- a/animation-services.html
+++ b/animation-services.html
@@ -590,83 +590,43 @@
 					<p class="text-white">Customers do not have the time to browse through pages of text or listen to lengthy explanations. It explains why video marketing is gaining popularity. Animated films benefit your company by reducing complex material and presenting it understandably.</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="ptag wow fadeInLeft">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-0 mt-md-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">1</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Enhanced Brand Recognition</h5>
-										<p class="description text-white">Animated videos help your business stand out from the crowd, whether offering a product or a service. They are dynamic and exciting and can be utilized in various ways to express what your brand stands for quickly.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">2</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Better Conversion Rate</h5>
-										<p class="description text-white">Businesses frequently employ animated videos to provide a unique and memorable touch to their digital marketing campaigns. In addition, they have been proven to enhance conversion rates, mainly when utilized on landing pages.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">3</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Improves SEO</h5>
-										<p class="description text-white">Animated videos assist your company in improving SEO results. They inspire people to spend more time on your site since they are fascinating and engaging. It informs Google that people enjoy what they see on your website, increasing your ranking on search results pages (SERPs).</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<div class="row mt-4">
+				<div class="col-md-6 wow fadeInLeft">
+					<ul class="nav nav-tabs benefits-tab flex-column">
+						<li class="nav-item">
+						   <a class="nav-link active" data-bs-toggle="tab" href="#enhanced">Enhanced Brand Recognition</a>
+						</li>
+						<li class="nav-item">
+						   <a class="nav-link" data-bs-toggle="tab" href="#better">Better Conversion Rate</a>
+						</li>
+						<li class="nav-item">
+						   <a class="nav-link" data-bs-toggle="tab" href="#improves">Improves SEO</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#product">A Better Understanding of the Product</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#effective">Effective Brand Promotion</a>
+						</li>
+					</ul>
 				</div>
-				<div class="col-md-6">
-					<div class="ptag wow fadeInRight">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">4</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">A Better Understanding of the Product</h5>
-										<p class="description text-white">If an image conveys a thousand words, an animated video is worth a million. Animated videos assist your clients in rapidly and easily understanding your product. When it comes to helping your customers understand your products and services, they outperform any other video style.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">5</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Effective Brand Promotion</h5>
-										<p class="description text-white">If you work with the right video animation company, you can develop an animation that will be noticed by your target audience and will spark their interest in your business. They employ vivid colors and other visual elements to attract people's attention and keep them watching the video for a long enough time.</p>
-									</div>
-								</div>
-							</div>
+				<div class="col-md-6 wow fadeInRight my-auto">
+					<div class="tab-content">
+						<div id="enhanced" class="container tab-pane active">
+							<p class="text-white">Animated videos help your business stand out from the crowd, whether offering a product or a service. They are dynamic and exciting and can be utilized in various ways to express what your brand stands for quickly.</p>
 						</div>
-					</div>
+						<div id="better" class="container tab-pane fade">
+							<p class="text-white">Businesses frequently employ animated videos to provide a unique and memorable touch to their digital marketing campaigns. In addition, they have been proven to enhance conversion rates, mainly when utilized on landing pages.</p>
+						</div>
+						<div id="improves" class="container tab-pane fade">
+							<p class="text-white">Animated videos assist your company in improving SEO results. They inspire people to spend more time on your site since they are fascinating and engaging. It informs Google that people enjoy what they see on your website, increasing your ranking on search results pages (SERPs).</p>
+						</div>
+						<div id="product" class="container tab-pane fade">
+							<p class="text-white">If an image conveys a thousand words, an animated video is worth a million. Animated videos assist your clients in rapidly and easily understanding your product. When it comes to helping your customers understand your products and services, they outperform any other video style.</p>
+						</div>
+						<div id="effective" class="container tab-pane fade">
+							<p class="text-white">If you work with the right video animation company, you can develop an animation that will be noticed by your target audience and will spark their interest in your business. They employ vivid colors and other visual elements to attract people's attention and keep them watching the video for a long enough time.</p>
+						</div>
 				</div>
 			</div>
 		</div>
