--- a/augmented-reality-development.html
+++ b/augmented-reality-development.html
@@ -863,56 +863,34 @@
 				<div class="col-lg-10">
 					<div class="common-heading wow fadeInLeft">
 						<h2>Augmented Reality Equipment We Work On</h2>
-						<p class="pt-2">The skilled development team at Future Reality is ready to provide multi-platform solutions that serve a wide range of applications, from customer-centric activities to enterprise-grade goods.</p>
+						<p class="pt-2 text-center">The skilled development team at Future Reality is ready to provide multi-platform solutions that serve a wide range of applications, from customer-centric activities to enterprise-grade goods.</p>
 					</div>
 				</div>
 			</div>
-			<div class="row mt-5">
-				<div class="col-sm-12">
-					<div class="equipment-slider owl-carousel wow fadeInRight">
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/ar-development/android.webp">
-									<div class="card-body">
-										<h5 class="text-center">Andriod</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/ar-development/ios.webp">
-									<div class="card-body">
-										<h5 class="text-center">iOS</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/ar-development/smart-glasses.webp">
-								<div class="card-body">
-									<h5 class="text-center">Smart Classes</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/ar-development/head-mounted-displays.webp">
-								<div class="card-body">
-									<h5 class="text-center">Head-Mounted Displays</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/ar-development/hololens.webp">
-								<div class="card-body">
-									<h5 class="text-center">HoloLens</h5>
-								</div>
-							</div>
+			<div class="row my-5 justify-content-center">
+				<div class="col-sm-12 wow fadeInRight">
+					<div class="img-slider">
+						<input type="radio" name="slider" id="ar-item-1" checked>
+						<input type="radio" name="slider" id="ar-item-2">
+						<input type="radio" name="slider" id="ar-item-3">
+						<input type="radio" name="slider" id="ar-item-4">
+						<input type="radio" name="slider" id="ar-item-5">
+						<div class="cards">
+							<label class="img-card" for="ar-item-1" id="ar-song-1">
+								<img src="images/services/ar-development/android.webp" alt="Android">
+							</label>
+							<label class="img-card" for="ar-item-2" id="ar-song-2">
+								<img src="images/services/ar-development/ios.webp" alt="iOS">
+							</label>
+							<label class="img-card" for="ar-item-3" id="ar-song-3">
+								<img src="images/services/ar-development/smart-glasses.webp" alt="Smart Glasses">
+							</label>
+							<label class="img-card" for="ar-item-4" id="ar-song-4">
+								<img src="images/services/ar-development/head-mounted-devices.webp" alt="Head Miunted Devices">
+							</label>
+							<label class="img-card" for="ar-item-5" id="ar-song-5">
+								<img src="images/services/ar-development/hololens.webp" alt="HoloLens">
+							</label>
 						</div>
 					</div>
 				</div>
@@ -2477,4 +2455,6 @@
 		}, delayMs);
 	});
 	</script>
+
+
 </body>
