--- a/extended-reality-development.html
+++ b/extended-reality-development.html
@@ -737,44 +737,26 @@
 					</div>
 				</div>
 			</div>
-			<div class="row mt-5">
-				<div class="col-sm-12">
-					<div class="equipment-slider owl-carousel">
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/xr-development/microsoft-hololens.webp">
-									<div class="card-body">
-										<h5 class="text-center">Microsoft HoloLens</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/xr-development/vuforia-logo.webp">
-									<div class="card-body">
-										<h5 class="text-center">Vuforia</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/xr-development/thingworx-logo.webp">
-								<div class="card-body">
-									<h5 class="text-center">Thingworx</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/xr-development/spatial-logo.webp">
-								<div class="card-body">
-									<h5 class="text-center">Spatial</h5>
-								</div>
-							</div>
+			<div class="row my-5 justify-content-center">
+				<div class="col-sm-12 wow fadeInRight">
+					<div class="img-slider">
+						<input type="radio" name="slider" id="xr-item-1" checked>
+						<input type="radio" name="slider" id="xr-item-2">
+						<input type="radio" name="slider" id="xr-item-3">
+						<input type="radio" name="slider" id="xr-item-4">
+						<div class="cards">
+							<label class="img-card" for="xr-item-1" id="xr-song-1">
+								<img src="images/services/xr-development/hololens.webp" alt="HoloLens">
+							</label>
+							<label class="img-card" for="xr-item-2" id="xr-song-2">
+								<img src="images/services/xr-development/spatial.webp" alt="Spatial">
+							</label>
+							<label class="img-card" for="xr-item-3" id="xr-song-3">
+								<img src="images/services/xr-development/thingworx.webp" alt="Thingworx">
+							</label>
+							<label class="img-card" for="xr-item-4" id="xr-song-4">
+								<img src="images/services/xr-development/vuforia.webp" alt="Vuforia">
+							</label>
 						</div>
 					</div>
 				</div>
