--- a/metaverse-development.html
+++ b/metaverse-development.html
@@ -562,122 +562,62 @@
 					<p class="text-white">Our Metaverse development solutions are industry-leading, with multiple applications across many industries. From building a virtual world to integrating augmented reality into your business, our experts will help you create the ultimate immersive experience for your customers.</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<div class="ptag wow fadeInLeft">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-0 mt-md-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">1</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Interactive Experience</h5>
-										<p class="description text-white">We develop an interactive metaverse experience that combines the latest technology, engaging and immersive storytelling, and face-to-face interactions. Our solution lets you build brand awareness, increase organization loyalty, and improve audiences' understanding of your purpose and goals.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">2</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Peer-To-Per (P2P) Interactions</h5>
-										<p class="description text-white">Our metaverse development solutions enable peer-to-per (p2p) interactions for your users, increasing their sense of community and furthering their engagement with your platform. Our team of experts has the expertise to ensure that your metaverse delivers all the features you require from a social VR world.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">3</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Wallet Integration</h5>
-										<p class="description text-white">Wallet integration is a gateway to the Metaverse. The wallet allows users to send and receive digital assets, view their transaction history and other details, and check their token balances. Our wallet integration solutions are perfect for applications users want to access with just one click.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">4</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Secured Storage</h5>
-										<p class="description text-white">We develop enterprise-grade Metaverse development solutions that allow you to store data in a secure, decentralized way. Through our service, we guarantee that your data will be safe and secured and keep you up-to-date with the latest technologies in cloud computing.</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
+			<div class="row mt-4">
+				<div class="col-md-6 wow fadeInLeft">
+					<ul class="nav nav-tabs benefits-tab flex-column">
+						<li class="nav-item">
+						   <a class="nav-link active" data-bs-toggle="tab" href="#interactive">Interactive Experience</a>
+						</li>
+						<li class="nav-item">
+						   <a class="nav-link" data-bs-toggle="tab" href="#peer">Peer-To-Per (P2P) Interactions</a>
+						</li>
+						<li class="nav-item">
+						   <a class="nav-link" data-bs-toggle="tab" href="#wallet">Wallet Integration</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#secured">Secured Storage</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#interoperability">Interoperability</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#multi">Multi-Layer Security</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#token">Tokenization</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" data-bs-toggle="tab" href="#decent">Decentralization</a>
+						</li>
+					</ul>
 				</div>
-				<div class="col-md-6">
-					<div class="ptag wow fadeInRight">
-						<div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column mt-4">
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">5</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Interoperability</h5>
-										<p class="description text-white">Our Metaverse development solutions are built on open-source technologies' flexible, interoperable, and scalable foundation. We improve the way companies run their businesses by streamlining operations, connecting experts, and empowering entrepreneurs.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">6</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Multi-Layer Security</h5>
-										<p class="description text-white">Our customers do not need to worry about the multi-layer security provided by our system as it is designed to be failproof and user-friendly. We take security very seriously and have several layers of protection built into our products to ensure that your data is safe and secure.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">7</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Tokenization</h5>
-										<p class="description text-white">Tokenization of assets is one of the most significant advantages of blockchain technology, and by creating tokens, we can track real-world assets in a digital form. Our metaverse development solutions allow you to easily create and distribute your tickets to investors, customers, and users.</p>
-									</div>
-								</div>
-							</div>
-							<div class="vertical-timeline-item vertical-timeline-element">
-								<div>
-									<span class="vertical-timeline-element-icon bounce-in">
-										<div class="numbers">
-											<p class="count text-white">8</p>
-										</div>
-									</span>
-									<div class="vertical-timeline-element-content bounce-in">
-										<h5 class="text-white">Decentralization</h5>
-										<p class="description text-white">Decentralization is a critical element of many applications and solutions that we develop. We believe in using decentralized solutions when possible because it maximizes data security. Our decentralized approach can also be applied to the configuration, distribution, and retrieval of content information.</p>
-									</div>
-								</div>
-							</div>
+				<div class="col-md-6 wow fadeInRight my-auto">
+					<div class="tab-content">
+						<div id="interactive" class="container tab-pane active">
+							<p class="text-white">We develop an interactive metaverse experience that combines the latest technology, engaging and immersive storytelling, and face-to-face interactions. Our solution lets you build brand awareness, increase organization loyalty, and improve audiences' understanding of your purpose and goals.</p>
 						</div>
-					</div>
+						<div id="peer" class="container tab-pane fade">
+							<p class="text-white">Our metaverse development solutions enable peer-to-per (p2p) interactions for your users, increasing their sense of community and furthering their engagement with your platform. Our team of experts has the expertise to ensure that your metaverse delivers all the features you require from a social VR world.</p>
+						</div>
+						<div id="wallet" class="container tab-pane fade">
+							<p class="text-white">Wallet integration is a gateway to the Metaverse. The wallet allows users to send and receive digital assets, view their transaction history and other details, and check their token balances. Our wallet integration solutions are perfect for applications users want to access with just one click.</p>
+						</div>
+						<div id="secured" class="container tab-pane fade">
+							<p class="text-white">We develop enterprise-grade Metaverse development solutions that allow you to store data in a secure, decentralized way. Through our service, we guarantee that your data will be safe and secured and keep you up-to-date with the latest technologies in cloud computing.</p>
+						</div>
+						<div id="interoperability" class="container tab-pane fade">
+							<p class="text-white">Our Metaverse development solutions are built on open-source technologies' flexible, interoperable, and scalable foundation. We improve the way companies run their businesses by streamlining operations, connecting experts, and empowering entrepreneurs.</p>
+						</div>
+						<div id="multi" class="container tab-pane fade">
+							<p class="text-white">Our customers do not need to worry about the multi-layer security provided by our system as it is designed to be failproof and user-friendly. We take security very seriously and have several layers of protection built into our products to ensure that your data is safe and secure.</p>
+						</div>
+						<div id="token" class="container tab-pane fade">
+							<p class="text-white">Tokenization of assets is one of the most significant advantages of blockchain technology, and by creating tokens, we can track real-world assets in a digital form. Our metaverse development solutions allow you to easily create and distribute your tickets to investors, customers, and users.</p>
+						</div>
+						<div id="decent" class="container tab-pane fade">
+							<p class="text-white">Decentralization is a critical element of many applications and solutions that we develop. We believe in using decentralized solutions when possible because it maximizes data security. Our decentralized approach can also be applied to the configuration, distribution, and retrieval of content information.</p>
+						</div>
+					  </div>
 				</div>
 			</div>
 		</div>
