--- a/mixed-reality-development.html
+++ b/mixed-reality-development.html
@@ -869,66 +869,36 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col-sm-12">
-					<div class="equipment-slider owl-carousel wow fadeInRight">
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/mr-development/microsoft-hololens.webp" alt="Microsoft HoloLens">
-									<div class="card-body">
-										<h5 class="text-center">Microsoft HoloLens</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/mr-development/htc-vive.webp" alt="HTC Vive">
-									<div class="card-body">
-										<h5 class="text-center">HTC Vive</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/mr-development/windows-mr.webp" alt="Windows MR">
-								<div class="card-body">
-									<h5 class="text-center">Windows MR</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/mr-development/oculus-rift.webp" alt="Oculus Rift">
-								<div class="card-body">
-									<h5 class="text-center">Oculus Rift</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
+					<div class="img-slider">
+						<input type="radio" name="slider" id="mr-item-1" checked>
+						<input type="radio" name="slider" id="mr-item-2">
+						<input type="radio" name="slider" id="mr-item-3">
+						<input type="radio" name="slider" id="mr-item-4">
+						<input type="radio" name="slider" id="mr-item-5">
+						<input type="radio" name="slider" id="mr-item-6">
+						<input type="radio" name="slider" id="mr-item-7">
+						<div class="cards">
+							<label class="img-card" for="mr-item-1" id="mr-song-1">
+								<img src="images/services/mr-development/google-card-board.webp" alt="Google card Board">
+							</label>
+							<label class="img-card" for="mr-item-2" id="mr-song-2">
 								<img src="images/services/mr-development/google-daydream.webp" alt="Google Daydream">
-								<div class="card-body">
-									<h5 class="text-center">Google Daydream</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/mr-development/google-card-board.webp" alt="Google Cardboard">
-								<div class="card-body">
-									<h5 class="text-center">Google Cardboard</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/mr-development/oculus-guest-1-and-2.webp" alt="Samsung Gear VR">
-								<div class="card-body">
-									<h5 class="text-center">Samsung Gear VR</h5>
-								</div>
-							</div>
+							</label>
+							<label class="img-card" for="mr-item-3" id="mr-song-3">
+								<img src="images/services/mr-development/hololens.webp" alt="Hololens VR">
+							</label>
+							<label class="img-card" for="mr-item-4" id="mr-song-4">
+								<img src="images/services/mr-development/htc-vive.webp" alt="HTC Hive">
+							</label>
+							<label class="img-card" for="mr-item-5" id="mr-song-5">
+								<img src="images/services/mr-development/oculus-rift.webp" alt="Oculus Rift">
+							</label>
+							<label class="img-card" for="mr-item-6" id="mr-song-6">
+								<img src="images/services/mr-development/samsung-gear-vr.webp" alt="Samsung Gear VR">
+							</label>
+							<label class="img-card" for="mr-item-7" id="mr-song-7">
+								<img src="images/services/mr-development/windows-mr.webp" alt="Windows MR">
+							</label>
 						</div>
 					</div>
 				</div>
