--- a/virtual-reality-development.html
+++ b/virtual-reality-development.html
@@ -936,75 +936,41 @@
 				</div>
 			</div>
 			<div class="row mt-5">
-				<div class="col-sm-12">
-					<div class="equipment-slider owl-carousel wow fadeInRight">
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/vr-development/htc-vive.webp" alt="HTC Vive">
-									<div class="card-body">
-										<h5 class="text-center">HTC Vive</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="item">
-								<div class="card">
-									<img src="images/services/vr-development/oculus-rift.webp" alt="Oculus Rift">
-									<div class="card-body">
-										<h5 class="text-center">Oculus Rift</h5>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/vr-development/samsung-gear-vr.webp" alt="Samsung Gear VR">
-								<div class="card-body">
-									<h5 class="text-center">Samsung Gear VR</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/vr-development/windows-mr.webp" alt="Windows MR">
-								<div class="card-body">
-									<h5 class="text-center">Windows MR</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
+				<div class="col-sm-12 wow fadeInRight">
+					<div class="img-slider">
+						<input type="radio" name="slider" id="vr-item-1" checked>
+						<input type="radio" name="slider" id="vr-item-2">
+						<input type="radio" name="slider" id="vr-item-3">
+						<input type="radio" name="slider" id="vr-item-4">
+						<input type="radio" name="slider" id="vr-item-5">
+						<input type="radio" name="slider" id="vr-item-6">
+						<input type="radio" name="slider" id="vr-item-7">
+						<input type="radio" name="slider" id="vr-item-8">
+						<div class="cards">
+							<label class="img-card" for="vr-item-1" id="vr-song-1">
+								<img src="images/services/vr-development/google-card-board.webp" alt="Google card Board">
+							</label>
+							<label class="img-card" for="vr-item-2" id="vr-song-2">
 								<img src="images/services/vr-development/google-daydream.webp" alt="Google Daydream">
-								<div class="card-body">
-									<h5 class="text-center">Google Daydream</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/vr-development/google-card-board.webp" alt="Google Cardboard">
-								<div class="card-body">
-									<h5 class="text-center">Google Cardboard</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/vr-development/oculus-guest-1-and-2.webp" alt="Oculus Quest 1&2">
-								<div class="card-body">
-									<h5 class="text-center">Oculus Quest 1&2</h5>
-								</div>
-							</div>
-						</div>
-						<div class="equipment-item">
-							<div class="card">
-								<img src="images/services/vr-development/holocube-vr.webp" alt="HoloCube VR">
-								<div class="card-body">
-									<h5 class="text-center">HoloCube VR</h5>
-								</div>
-							</div>
+							</label>
+							<label class="img-card" for="vr-item-3" id="vr-song-3">
+								<img src="images/services/vr-development/holocube-vr.webp" alt="Holocube VR">
+							</label>
+							<label class="img-card" for="vr-item-4" id="vr-song-4">
+								<img src="images/services/vr-development/htc-vive.webp" alt="HTC Hive">
+							</label>
+							<label class="img-card" for="vr-item-5" id="vr-song-5">
+								<img src="images/services/vr-development/oculus-guest-1-and-2.webp" alt="Oculus Guest 1 & 2">
+							</label>
+							<label class="img-card" for="vr-item-6" id="vr-song-6">
+								<img src="images/services/vr-development/oculus-rift.webp" alt="Oculus Rift">
+							</label>
+							<label class="img-card" for="vr-item-7" id="vr-song-7">
+								<img src="images/services/vr-development/samsung-gear-vr.webp" alt="Samsung Gear VR">
+							</label>
+							<label class="img-card" for="vr-item-8" id="vr-song-8">
+								<img src="images/services/vr-development/windows-mr.webp" alt="Windows MR">
+							</label>
 						</div>
 					</div>
 				</div>
